# cheats

./: .gitignore  CMakeLists.txt  README.md  WINSDK_VERSION.txt  build.bat  build.cmake.bat  build.sh  crosscompile.sh  crosscompilewin.cmake.sh  test.cpp  test2.cpp  test_tui.cpp  toolchain-mingw.cmake
first/libmem-5.0.4-x86_64-linux-gnu-shared/: test.cpp
first/libmeminterface/: GLIBC_VERSION.txt  MSVC_VERSION.txt  WINSDK_VERSION.txt  build.bat  build.sh  crosscompilewin.sh  test  test.cpp
utils/: disasm.cpp  disasm.h  moduledump.h  modulelist.cpp  modulelist.h  proclist.cpp  proclist.h  sigscan.cpp  sigscan.h  structs.h  utils.h  watcher.cpp  watcher.h
